# kdev-julia

./: .gitignore  .graphicstoolviewfactory.cpp.kate-swp  CMakeLists.txt  Project.toml  UML.xmi  graphicsoutputview.cpp  graphicsoutputview.h  graphicsoutputwidget.cpp  graphicstoolviewfactory.cpp  graphicstoolviewfactory.h  juliaexecutionjob.cpp  juliaexecutionjob.h  juliaexecutionlauncher.cpp  juliaexecutionlauncher.h  juliahighlighting.cpp  juliahighlighting.hpp  julialanguagesupport.cpp  julialanguagesupport.h  juliastartupscript.jl  kdev-julia.cpp  kdev-julia.kdev4  kdevjuliasupport.json  kdevjuliaversion.h.cmake
graphics/: FilePlotDisplay.jl  SocketPlotDisplay.jl
graphics/examples/: client_example.jl  makie_3d_plot.jl  simple_plot.jl  sine_wave_server.jl  viewer_server.py
graphics/test/: integration_tests.jl  runtests.jl
graphics/tests/: FilePlotDisplayTest.jl  SocketPlotDisplay_test.jl  SocketPlotTestClient.jl  SocketPlotTestServer.jl
lspclient/: CMakeLists  CMakeLists.txt  gotosymboldialog.cpp  inlayhints.cpp  lspclientcompletion.cpp  lspclientpluginview.cpp  lspclientprotocol.h  lspclientserver.cpp  lspclientservermanager.cpp  lspclientservermanager.h  lspsemantichighlighting.cpp  semantic_tokens_legend.cpp
lspclient/lib/: CMakeLists.txt  hostprocess.cpp  hostprocess.h  ktexteditor_utils.cpp  ktexteditor_utils.h  quickdialog.h
lspclient/lib/diagnostics/: diagnosticview.cpp  diagnosticview.h
lspclient/lib/texthint/: KateTextHintManager.cpp  KateTextHintManager.h  hintview.cpp
lspclient/tests/: CMakeLists.txt  juliasptestapp.cpp  lsptestapp.cpp
parser/: CMakeLists.txt  astbuilder.cpp  astbuilder.h
projectconfig/: projectconfig.ui  projectconfigpage.cpp  projectconfigpage.h
src/: CMakeLists.txt  kdev-julia.h  kdev-julia.json
